[docgen] Update README.md skip-checks: true